# rust-gpu-mandelbrot

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs  mandelbrot.wgsl  parameters.rs  result.rs  wgpu.rs
src/backends/: cpu.rs  mod.rs  opengl.rs  wgpu.rs
src/shaders/: mandelbrot-u32.rs.spv  mandelbrot.rs.spv  mandelbrot.wgsl  provider.rs
