[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
glutin = "0.29"
image = "0.24"
pollster = "0.2"
scarlet = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = { version = "0.13", features = ["spirv"] }

[build-dependencies]
gl_generator = "0.14"
